--- a/CustomCamera/Info.plist
+++ b/CustomCamera/Info.plist
@@ -35,10 +35,14 @@
 			</dict>
 		</dict>
 	</dict>
+    
 	<key>NSCameraUsageDescription</key>
 	<string> $(PRODUCT_NAME) camera use</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) photo use</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Please allow access to save photo in your photo library</string>
+    
 	<key>UIAppFonts</key>
 	<array>
 		<string>varela_regular.ttf</string>
